--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-body {
+/* body {
   margin: 0;
+  display: 100%;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +13,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container-fluid{
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+}
+.warper login{
+  margin-right: 20px;
+  margin-bottom: 20px;
+} */
