--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -4,13 +4,13 @@ html{
     height: 1080;
     // width: 100vw;
     // height: 100vh;
-    display: grid;
+ 
 
 }
-.row {  
-    display: flex;
-    flex-wrap: wrap;
-}
+// .row {  
+//     display: flex;
+//     flex-wrap: wrap;
+// }
 //   }{
 //     display: grid;
 //     fle
