--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -1,29 +1,35 @@
-.Subheading{
-   
-    position: static;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-    
-    /* H2 */
-    
-    font-family: Segoe UI;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 133.51%;
-    /* identical to box height, or 48px */
-    
-    text-align: right;
-    
-    color: #0B0B0B;
-    
-    
-    /* Inside Auto Layout */
-    
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    margin: 0px 0px;
-    }
+// .subheading{  
+//     position: static;
+//     left: 0%;
+//     right: 0%;
+//     top: 0%;
+//     bottom: 0%;    
+//     font-family: Segoe UI;
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 36px;
+//     line-height: 133.51%;
+//     /* identical to box height, or 48px */
+//     text-align: right;
+//     color: #0B0B0B;
+//     /* Inside Auto Layout */
+//     flex: none;
+//     order: 0;
+//     flex-grow: 0;
+//     margin: 0px 0px;
+//     }
+
+// .container-fluid{
+//     display: block;
+//     float: left;
+// }
+
+// #features {
+//     position: relative;
+//     float: left;
+// }
+
+// .container-fluid{
+//     display: grid;
+
+// }
