--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -33,3 +33,22 @@
 //     display: grid;
 
 // }
+
+// .position{
+//     margin-right: 1000px;
+// }
+
+.form{
+     
+    // height: 100%;
+    // display: flex;
+    // flex-direction: column; /*places the left and right headers above the bottom content*/
+    // flex-grow: 1;
+    
+}
+.buttom{
+    width: 120px;
+    height: 35px
+    ;
+}
+
