--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,11 +1,10 @@
 
 html{
-    width: 1900px;
-    height: 1080;
+    width:100vw;
+    height: 100vh;
     // width: 100vw;
     // height: 100vh;
  
-
 }
 // .row {  
 //     display: flex;
