--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,8 @@
 .header{
+    
     width: 100%;
     height: 70px;
     top: 0;
-    background-color: blue;
+    background: #1A1F71;
+    border: 1px solid rgba(17, 87, 144, 0.67);
 }
