--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -6,6 +6,32 @@ html{
     // height: 100vh;
  
 }
+.grid-container{
+    display: grid;
+    // grid-template-columns: 1fr 3fr ;
+    grid-template-areas: 
+      "header header  header  header  header"
+     
+      " side main main main main "
+       "side main main main main " ;
+  
+
+  
+    height: 100vh;
+    overflow: auto;
+    margin-top: 90px;
+    
+    @media (min-width: 700px) {
+        margin-top: 0px;
+        grid-template-areas:
+        "header header"
+      "side side"
+      "main main"
+
+      
+      }
+    
+}
 // .row {  
 //     display: flex;
 //     flex-wrap: wrap;
