--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -34,12 +34,23 @@
 
 // }
 
-// .position{
-//     margin-right: 1000px;
-// }
+.position{
+    margin-right: 1000px;
+}
 
 .form{
      
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    // grid-gap: 20px;
+    grid-area: main;
+    // padding: 20px;
+    // @media (min-width: 700px) {
+    //   overflow: auto;
+    // }  
     // height: 100%;
     // display: flex;
     // flex-direction: column; /*places the left and right headers above the bottom content*/
