--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,8 +1,25 @@
 .header{
-    
+    display: flex;
+    z-index: 100;
+    background: #1A1F71;
+    align-items: center;
+    justify-content: center;
+    grid-area: header;
+    padding: 20px;
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 70px;
-    top: 0;
-    background: #1A1F71;
-    border: 1px solid rgba(17, 87, 144, 0.67);
+    // border: 1px solid rgba(17, 87, 144, 0.67);
+    // -webkit-box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
+    // -moz-box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
+    // box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
+    @media (min-width: 700px) {
+        position: initial;
+    }
+   
+   
+    
+    
+   
 }
