--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -34,15 +34,15 @@
 
 // }
 
-.position{
-    margin-right: 1000px;
-}
+
 
 .form{
      
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: grid;
+    margin-inline-end:0px;
+    
+    // flex-wrap: wrap;
+    // justify-content: space-around;
     
     // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     // grid-gap: 20px;
@@ -57,9 +57,15 @@
     // flex-grow: 1;
     
 }
+@media only screen and (min-width: 1800px) {
+    .form{
+       
+        position: initial;
+      }
+} 
+
 .buttom{
-    width: 120px;
-    height: 35px
-    ;
+    text-align: center;
 }
+
 
