--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -14,12 +14,16 @@
     // -webkit-box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
     // -moz-box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
     // box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
-    @media (min-width: 700px) {
-        position: initial;
-    }
-   
-   
-    
-    
-   
 }
+   
+    @media only screen and (max-width: 1920px) {
+        .header{
+           top:0;
+            position: initial;
+          }
+    } 
+   
+   
+    
+    
+   
