--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -8,7 +8,7 @@ html{
 }
 // .grid-container{
 //     display: grid;
-//     // grid-template-columns: 1fr 3fr ;
+//     // 
 //     grid-template-areas: 
 //       "header header  header  header  header"
      
@@ -26,6 +26,7 @@ html{
 // }
 .grid-container{
     display: grid;
+    grid-template-columns: 1fr 4fr ;
     grid-template-areas: 
       "header header  header  header  header"
       " side main main main main "
@@ -34,7 +35,7 @@ html{
     overflow: auto;
    
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 767px) {
     .grid-container{
         margin-top: 0px;
         grid-template-areas:
