--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,7 +1,8 @@
 
 html{
     width:100vw;
-    height: 100vh;
+    min-height: 100vh;
+    ;
     // width: 100vw;
     // height: 100vh;
  
@@ -26,16 +27,19 @@ html{
 // }
 .grid-container{
     display: grid;
+    margin-top: 0px;
     grid-template-columns: 1fr 4fr ;
     grid-template-areas: 
       "header header  header  header  header"
       " side main main main main "
+       "side main main main main " 
+       " side main main main main "
        "side main main main main " ;
-    height: 100vh;
+    
     overflow: auto;
    
 }
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 767px){
     .grid-container{
         margin-top: 0px;
         grid-template-areas:
