--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -41,8 +41,9 @@
 .catgory{
     background: #1A1F71;
      margin-top:0px;
-     height:100vh;
-     width: 70px;
+     min-height:1868px;
+
+     min-width: 70px;
 
 }
 .warper{
