--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -1,14 +1,14 @@
 .userName{
     top:70px;
     height: 120px;
-    width:230px;
+    max-width:230px;
     background-color: yellow;
     font-family: 'Font Awesome 5 Pro';
 }
 .sidebar{
     
-    width: 230px;
-    height: 100vh;
+    max-width: 230px;
+    height: 100%;
     box-sizing: border-box;
     grid-area: side;
     display: flex;
@@ -34,16 +34,16 @@
 // }
 
 .items{   
-    width: 210px;
-    height:100% ;
+    max-width: 210px;
+    min-height:100% ;
 }
 
 .catgory{
     background: #1A1F71;
      margin-top:0px;
-     min-height:1868px;
+     min-height:100%;
 
-     min-width: 70px;
+     max-width: 70px;
 
 }
 .warper{
