--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -66,8 +66,8 @@
     
 }
 @media only screen and (min-width: 767px) {
-    .form{
-       
+    .content-wrapper{
+        // min-height: 1800px;    
         position: initial
       }
 } 
@@ -75,7 +75,7 @@
 .buttom{
     text-align: center;
 }
-.text-feild{
+.text-field{
   
     max-width: 282px;
     min-height: 32px;
@@ -83,6 +83,9 @@
     // padding-top: 35px;
     // padding-bottom: 35px;
     
+}
+.text-width{
+    max-width: 282px;
 }
 .flex-container {
     display: flex;
@@ -105,5 +108,14 @@
 .hr{
     margin-top: 0px;
 }
+.note{
+    margin-inline-start: 100px;
+    max-width: 770px;
+    min-height: 118px;
+    
+}
+// .toggle{
+//    padding-top: 50px;
+// }
 
 
