--- a/src/scss/sub-header.scss
+++ b/src/scss/sub-header.scss
@@ -2,7 +2,7 @@
     display: flex;
     // flex-direction: row;
 
-     padding-inline-end: 30px;
+     margin-inline-end: 5%;
 
    
    justify-content:space-between;
@@ -17,7 +17,7 @@
 .divider {
   display: flex;
  
-  flex: 0.8;
+  flex: 0.7;
 }
 
 .sub-header-buttom{
