--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -24,6 +24,11 @@
     
     
 }
+.side-sub{
+    text-decoration-color: #1A1F71;
+}
+
+
 // display:flex;
 // justify-content:space-around;
 // height: 100vh;
