--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -1,4 +1,4 @@
-.grid-container{
+.grid-container-login{
     display: grid;
     
     grid-template-columns: 1fr 1fr ;
@@ -18,7 +18,7 @@
 
 
 }
-.text-field{
+.text-field-login{
   
     max-width: 350px;
    
