--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -116,8 +116,11 @@
 }
 // .toggle{
 //    padding-top: 50px;
+// // }
+// .dataListHeader{
+//     background-color: #000000;
 // }
-.dataListHeader{
-    background-color: #000000;
-}
+.dataListFooter{
+    background-color: '#F4F2FF'!important;
 
+}
