--- a/src/scssPages/form.scss
+++ b/src/scssPages/form.scss
@@ -41,7 +41,7 @@
     //  justify-content: space-between;
     grid-template-rows: auto;
     // display: grid;
-    grid-template-columns: 1fr 1fr;
+  
     padding-inline-start: 100px;
     // margin-inline-start:7%;
     // grid-auto-rows: 70px;    // margin-inline-end:0px;
@@ -119,8 +119,8 @@
 // // }
 // .dataListHeader{
 //     background-color: #000000;
-// }
-.dataListFooter{
-    background-color: '#F4F2FF'!important;
+// // }
+// .dataListFooter{
+//     background-color: '#F4F2FF'!important;
 
-}
+// }
