--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,8 +6,8 @@
     padding: 20px;
     position: fixed;
     top: 0;
-    width: 100%;
-    height: 70px;
+   max-width:  100%;
+    max-height: 70px;
     justify-content:space-between;
     // border: 1px solid rgba(17, 87, 144, 0.67);
     // -webkit-box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
