--- a/src/shared/components/tabels/detaiList.scss
+++ b/src/shared/components/tabels/detaiList.scss
@@ -16,7 +16,7 @@
  
   // overflow-x: auto;
   // overflow-y: auto;
-
+  margin-top: 0px;
   padding-right: 4px;
   padding-bottom: 20px;
   padding-inline-end: 25px;
