add custem table and popup

--- a/src/scssPages/base.scss
+++ b/src/scssPages/base.scss
@@ -54,7 +54,7 @@
         grid-template-columns: 1fr 4fr ;
         grid-template-areas:
         "header header  header  header  header"
-        
+        " side subHeader subHeader subHeader subHeader "
       " side   main   main    main    main "
        "side    main  main    main    main " 
        " side   main   main   main    main "
