--- a/src/components/auth/login.scss
+++ b/src/components/auth/login.scss
@@ -1,8 +1,10 @@
 .grid-container-login{
-    display: grid;
+    display: flex;
     
-    grid-template-columns: 1fr 1fr ;
+    // grid-template-columns: 1fr 1fr ;
+    justify-content: center;
     align-items: center;
+
     overflow: auto;
     min-height: 100%;
     
@@ -10,10 +12,8 @@
 .login{
     display: flex;
     flex-direction: column;
-   
-    // grid-template-rows: auto;
-    margin-inline-start: 10%;
-    margin-top: 20%;
+    grid-template-rows: auto;
+    margin-top: 10%;
     
 
 
@@ -21,7 +21,7 @@
 .text-field-login{
   
     max-width: 350px;
-   
+    min-width: 320px;
     padding-bottom:20px;
     text-align: center;
     
