--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,7 +8,8 @@
     top: 0;
    max-width:  100%;
     max-height: 70px;
-    justify-content:space-between;
+    justify-content: space-between;
+    // justify-content:space-between;
     // border: 1px solid rgba(17, 87, 144, 0.67);
     // -webkit-box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
     // -moz-box-shadow: 0px 4px 13px -2px rgba(0,0,0,0.75);
@@ -16,7 +17,10 @@
 }
 .user{
     display: flex;
-}
+    // justify-content: space-between;
+    // min-width:200px;
+    // max-width: 300px;
+}   
 
    
     @media only screen and (max-width: 1920px) {
@@ -27,11 +31,7 @@
     } 
    
 .user-name{
-    
-   
-   
     top: 0px;
-    
     font-family: Calibri;
     font-style: normal;
     font-weight: bold;
@@ -48,15 +48,13 @@
 }
 .logout{
     font-family: Calibri;
-   font-style: normal;
    font-weight: bold;
  font-size: 18px;
-   line-height: 22px;
-   color: #FAF9F8;
-   padding-inline-start:20px;
-
-
+   color: #FAF9F8; 
+   padding-inline-start: 10px;
 }
+
+// }
 .logoutIcon{
     color:  #FAF9F8;
     // font-family: Font Awesome 5 Pro;
