add create user

--- a/src/shared/components/tabels/detaiList.scss
+++ b/src/shared/components/tabels/detaiList.scss
@@ -27,9 +27,10 @@
         div[class^='root'], div[class*='root']{
           color: #1A1F71;
           width: 200px !important;
-          background-color:#F4F2FF;
+          background-color:#E1E1E1
+          ;
           &:hover {
-                   background-color:#F4F2FF;
+                   background-color:#E1E1E1 ;
                  }
         }
       }
