add creat customer

--- a/src/scssPages/base.scss
+++ b/src/scssPages/base.scss
@@ -33,8 +33,7 @@
     margin-top: 0px;
     // grid-template-columns: 1fr 4fr ;
     grid-template-areas: 
-      "header header  header  header  header"
-    
+      "header header  header  header  header" 
       " side   main   main    main    main "
        "side    main  main    main    main " 
        " side   main   main   main    main "
@@ -54,11 +53,12 @@
         grid-template-columns: 1fr 4fr ;
         grid-template-areas:
         "header header  header  header  header"
-        " side subHeader subHeader subHeader subHeader "
       " side   main   main    main    main "
        "side    main  main    main    main " 
        " side   main   main   main    main "
        "side   main    main   main    main " ;
+// }  // " side subHeader subHeader subHeader subHeader "
+
     //     "header header  header  header  header"
     //   " side main main main main "
     //    "side main main main main " ;
@@ -67,7 +67,6 @@
 // .row {  
 //     display: flex;
 //     flex-wrap: wrap;
-// }
 //   }{
 //     display: grid;
 //     fle
