--- a/src/components/customerSearch/customerSearch.scss
+++ b/src/components/customerSearch/customerSearch.scss
@@ -1,8 +1,12 @@
 .content-search{
     display:flex;
     flex-grow: 4;
+    margin-bottom: 10px;
 
 }
 .bottun{
     padding-inline-start:15px ;
 }
+// .table{
+//     ;
+// }
