--- a/src/shared/components/tabels/detaiList.scss
+++ b/src/shared/components/tabels/detaiList.scss
@@ -25,7 +25,7 @@
       
         div[class^='root'], div[class*='root']{
           color: #1A1F71;
-          width: 200px !important;
+          // width: 200px !important;
           background-color:#E1E1E1
           ;
           &:hover {
